# raven

./: .gitignore  .raven.conf  Cargo.toml  README.md  TODO.md
src/: auth.rs  cli.rs  config.rs  consts.rs  daemon.rs  lib.rs  local.rs  main.rs  packet.rs  raven.rs  util.rs
src/daemon/: local.rs  main.rs  remote.rs
src/daemon/remote/: receive.rs
src/front/: cli.rs  mailbox.rs  main.rs  send.rs
src/raven/: mailbox.rs  receive.rs  send.rs
src/raven/receive/: helo.rs
src/remote/: receive.rs
