[package]
name = "raven"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.5"
serde = { version = "1.0.200", features = ["serde_derive"] }
serde_derive = "1.0.200"
speedy ={ version = "0.8.7" }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }
