[package]
name = "raven"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
homedir = "0.3.3"
serde = "1.0.204"
serde_derive = "1.0.204"
toml = "0.8.15"
