[package]
name = "rv-raven"
version = "0.0.3"
edition = "2021"
authors = [ "Jorge Harrisonn <j.h.m.t.v.10@gmail.com>" ]
description = "A CLI tool to share data across your devices in your local/private networks."

repository = "https://github.com/OJarrisonn/raven"
license-file = "LICENSE"
readme = "README.md"
keywords = ["cli", "networking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rv"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
homedir = "0.3.3"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"
